# pybind11_bazel

./: MODULE.bazel
examples/basic/: MODULE.bazel
examples/basic/patches/: rules_cc.patch
