# Bazel extensions for pybind11
module(
    name = "pybind11_bazel",
    version = "3.0.1",
)

bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")

internal_configure = use_extension("//:internal_configure.bzl", "internal_configure_extension")
use_repo(internal_configure, "pybind11")
